Fix firefox styling with fallback backdrop filter and z-index ordering
(i.e. make buttons transparent with blob behind the buttons when backdrop filter / frosted glass is not supported)

--- a/docusaurus/src/components/HomepageFeatures/homepage.module.scss
+++ b/docusaurus/src/components/HomepageFeatures/homepage.module.scss
@@ -1,4 +1,4 @@
-@import "../../css/variables";
+@import "../../css/_variables.scss";
 
 .features {
   display: flex;
@@ -24,22 +24,29 @@
 }
 
 .frostedButton {
-  background-color: #ffffff10;
+  background-color: var(--raydium-button-transparent);
+  // background-color: rgba(255, 255, 255, 0.9);
+  @include z-index(homepageButtons);
   color: var(--ifm-font-color-base);
   &:hover {
     cursor: pointer;
     text-decoration: none;
     color: var(--ifm-font-color-base);
-    // transform: scale(1.05);
     transform: translateY(-5px);
   }
-
   box-shadow: 0 8px 28px 4px rgb(86 91 115 / 15%);
-
-  backdrop-filter: blur(100px);
   border-radius: 20px;
   border: 1px solid var(--ifm-color-emphasis-400);
   margin: 16px;
-  padding: 1rem;
+  padding: 16px;
   transition: 0.3s;
+}
+
+/* if backdrop support: very transparent and blurred (required for firefox...) */
+@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  .frostedButton {
+    background-color: #ffffff10;
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px);
+  }
 }
