--- a/docusaurus/src/css/custom.scss
+++ b/docusaurus/src/css/custom.scss
@@ -10,6 +10,7 @@
   --raydium-purple: #8c46ff;
   --raydium-purple-dark: #7c3de7;
   --raydium-purple-light: #af7dff;
+  --raydium-button-transparent: #ffffff99;
   --raydium-blue-dark: #131a35;
   --raydium-blue-darker: #131a35;
   --raydium-cyan: #39d0d8;
@@ -40,6 +41,7 @@
 [data-theme="dark"] {
   --background: var(--gray-800);
   --background-footer: #1c1e21;
+  --raydium-button-transparent: #8c46ff50;
   --gradient1: #5347d3;
   --gradient2: #582ba7;
   --nav-background-color: rgba(0, 0, 0, 0.7);
